--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ main, dev-environment ]
+    branches: [main, dev-environment]
   pull_request:
-    branches: [ main, dev-environment ]
+    branches: [main, dev-environment]
 
 env:
   CI: true
@@ -13,36 +13,47 @@ jobs:
   test-and-build:
     name: Test and Build
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18.x'
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Run tests with coverage
-      run: npm test -- --coverage --watchAll=false --passWithNoTests
-    
-    - name: Build with test environment variables
-      run: |
-        export REACT_APP_API_KEY=test_key
-        export REACT_APP_AUTH_DOMAIN=test.firebaseapp.com
-        export REACT_APP_PROJECT_ID=test-project
-        export REACT_APP_STORAGE_BUCKET=test.appspot.com
-        export REACT_APP_MESSAGING_SENDER_ID=123456789
-        export REACT_APP_APP_ID=1:123456789:web:abcdef
-        npm run build
-      env:
-        CI: false 
-    
-    - name: Test artifacts
-      run: |
-        echo "Build completed successfully"
-        ls -la build/
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18.x"
+          cache: "npm"
+
+      - name: Debug file structure
+        run: |
+          echo "=== Full project structure ==="
+          find src -name "*.js" -o -name "*.jsx" -o -name "*.test.js" | grep -i footer
+          echo "=== Footer directory detailed ==="
+          ls -la src/components/footer/
+          echo "=== Footer.jsx content verification ==="
+          cat src/components/footer/Footer.jsx | tail -3
+          echo "=== Footer.test.js import line ==="
+          grep "import Footer" src/components/footer/Footer.test.js
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests with coverage
+        run: npm test -- --coverage --watchAll=false --passWithNoTests
+
+      - name: Build with test environment variables
+        run: |
+          export REACT_APP_API_KEY=test_key
+          export REACT_APP_AUTH_DOMAIN=test.firebaseapp.com
+          export REACT_APP_PROJECT_ID=test-project
+          export REACT_APP_STORAGE_BUCKET=test.appspot.com
+          export REACT_APP_MESSAGING_SENDER_ID=123456789
+          export REACT_APP_APP_ID=1:123456789:web:abcdef
+          npm run build
+        env:
+          CI: false
+
+      - name: Test artifacts
+        run: |
+          echo "Build completed successfully"
+          ls -la build/
