--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,19 +30,12 @@ jobs:
       - name: Run tests with coverage
         run: npm test -- --coverage --watchAll=false --passWithNoTests
 
-      - name: Build with test environment variables
-        run: |
-          export REACT_APP_API_KEY=test_key
-          export REACT_APP_AUTH_DOMAIN=test.firebaseapp.com
-          export REACT_APP_PROJECT_ID=test-project
-          export REACT_APP_STORAGE_BUCKET=test.appspot.com
-          export REACT_APP_MESSAGING_SENDER_ID=123456789
-          export REACT_APP_APP_ID=1:123456789:web:abcdef
-          npm run build
+      - name: Build project
+        run: npm run build
         env:
-          CI: false
+          CI: false 
 
-      - name: Test artifacts
+      - name: Verify build artifacts
         run: |
           echo "Build completed successfully"
-          ls -la build/
+          dir build/
