--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -33,9 +33,36 @@ jobs:
       - name: Build project
         run: npm run build
         env:
-          CI: false 
+          CI: false
 
       - name: Verify build artifacts
         run: |
           echo "Build completed successfully"
           dir build/
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: build/
+
+  deploy-to-azure:
+    name: Deploy to Azure Web App
+    if: github.ref == 'refs/heads/main'
+    needs: test-and-build
+    runs-on: windows-latest
+
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: build/
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
