github actions:add app servive name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,3 +66,7 @@ jobs:
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
+        with:
+          app-name: movierecommendation-frfuhhhuacbxcrbc
+          slot-name: "production"
+          package: ./build
