--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: movierecommendation-frfuhhhuacbxcrbc
+          app-name: movierecommendation
           slot-name: "production"
           package: ./build
