Set MIME types for proper file delivery

--- a/public/web.config
+++ b/public/web.config
@@ -14,7 +14,9 @@
       </rules>
     </rewrite>
     <staticContent>
+      <mimeMap fileExtension=".js" mimeType="application/javascript" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".map" mimeType="application/json" />
     </staticContent>
   </system.webServer>
 </configuration>
